fix(api-gateway): use generated typescript clients
